<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@drawable/nav_header_background"
    android:id="@+id/drawer_navigation_header"
    >

    <ImageView
        android:id="@+id/nav_header_user_photo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/nav_header_user_infos_linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:id="@+id/nav_header_user_infos_linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/nav_header_user_photo"
        app:layout_constraintStart_toEndOf="@+id/nav_header_user_photo"
        app:layout_constraintTop_toTopOf="@+id/nav_header_user_photo"
        >

        <TextView
            android:id="@+id/nav_header_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/nav_header_user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="15sp"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>