<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/colorPrimary"
            android:theme="@style/ToolBarStyle"
            app:title="@string/toolbar_title"
            app:titleTextColor="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/autocomplete_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="20dp"
                >

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/ic_search_black_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="5dp"
                    tools:ignore="ContentDescription" />


                <EditText
                    android:id="@+id/autocomplete_editText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="35dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="35dp"
                    android:textColor="@color/black"
                    android:hint="@string/autocomplete_hint_map_fragment"
                    tools:ignore="Autofill,TextFields" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>


        <FrameLayout
            android:id="@+id/activity_main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/activity_main_bottom_navigation"
            android:layout_below="@+id/activity_main_toolbar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            tools:context='.controller.MainActivity' />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/activity_main_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:background="@color/white"
            app:itemIconTint="@drawable/bottom_navigation_colors"
            app:itemTextColor="@drawable/bottom_navigation_colors"
            app:menu="@menu/bottom_navigation_menu" />
    </RelativeLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/activity_main_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="start"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/activity_main_nav_header"
            app:menu="@menu/activity_main_menu_drawer"
            android:background="@color/colorAccent"
            app:itemTextColor="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:id="@+id/drawer_bottom_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:src="@drawable/ic_logo_go4lunch"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="ContentDescription" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>
