<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/map_view_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_list"
        android:enabled="true"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/list_view_title"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_workmates"
        android:enabled="true"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/workmates_title"
        app:showAsAction="ifRoom" />
</menu>